--- a/src/primitives/section.module.scss
+++ b/src/primitives/section.module.scss
@@ -20,11 +20,11 @@
   }
 
   &--fullHeight {
-    height: calc(100vh - 1.2rem - 175px);
+    height: calc(100vh - 197px);
   }
 
   &--fullHeightMobile {
-    height: calc(100vh - 1.2rem - 235px);
+    height: calc(100vh - 257px);
   }
 }
 
